--- a/VagrantTray/Deploy/releasenotes.html
+++ b/VagrantTray/Deploy/releasenotes.html
@@ -6,6 +6,15 @@
     <title>Release Notes</title>
 </head>
     <body>
+        <h1>Version 0.1.2</h1>
+        <ul>
+            <li>
+                <h2>Bug Fixes</h2>
+                <ul>
+                    <li>Occasional issue with reading command output resulting in application crash</li>
+                </ul>
+            </li>
+        </ul>
         <h1>Version 0.1.1</h1>
         <ul>
             <li>
